# cargo-duplicated-deps

./: Cargo.toml  README.md
src/: main.rs
