[package]
name = "cargo-duplicated-deps"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A tool to find duplicated dependencies in Cargo.toml"
repository = "https://github.com/arihant2math/cargo-duplicated-deps"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
keywords = ["cargo", "dependencies", "tool"]

[dependencies]
cargo-lock = "10.1"
semver = "1.0"
