[package]
name = "cargo-duplicated-deps"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A tool to find duplicated dependencies in Cargo.toml"
repository = "https://github.com/arihant2math/cargo-duplicated-deps"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
keywords = ["cargo", "dependencies", "tool"]

[dependencies]
anyhow = "1.0"
cargo-lock = "10.1"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
semver = "1.0"
serde_json = "1.0"
