[package]
name = "cargo-duplicated-deps"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A tool to find duplicated dependencies in Cargo.toml"
repository = "https://github.com/arihant2math/cargo-duplicated-deps"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"
authors = ["Ashwin Naren <arihant2math@gmail.com>"]
keywords = ["cargo", "dependencies", "tool"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cargo-lock = "10.1"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = {version = "0.28", default-features = false, features = ["windows"] }
reqwest = { version = "0.12", features = ["brotli", "json"] }
semver = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
